[gd_scene load_steps=5 format=2]

[ext_resource path="res://Assets/Objetos/Arbol.png" type="Texture" id=1]
[ext_resource path="res://Escenas/Rama.tscn" type="PackedScene" id=2]
[ext_resource path="res://Assets/Objetos/Arbol_rama.png" type="Texture" id=3]
[ext_resource path="res://Escenas/Scripts/ArbolRama.gd" type="Script" id=4]

[node name="ArbolRama" type="StaticBody2D"]
script = ExtResource( 4 )

[node name="CollisionShape2D" type="CollisionPolygon2D" parent="."]
position = Vector2( -1, 0 )
polygon = PoolVector2Array( -17, -11, -7, -22, -1, -24, 9, -21, 17, -11, 19, 0, 13, 15, 7, 21, -7, 21, -11, 17, -16, 13, -19, -3 )

[node name="arbolSprite" type="Sprite" parent="."]
texture = ExtResource( 1 )

[node name="arbolRamaSprite" type="Sprite" parent="."]
texture = ExtResource( 3 )

[node name="Rama" parent="." instance=ExtResource( 2 )]
position = Vector2( 0, 21 )
